package com.silfi.iphone;

public interface AparelhoTelefonico {
    void fazerChamada(String numero);
    void receberChamada(String numero);
    void finalizarChamada();
}
