package com.silfi.iphone;

public interface NavegadorInternet {
    void navegar(String url);
    void atualizarPagina();
    void adicionarAosFavoritos(String url);
}
