package com.silfi.iphone;

public interface ReprodutorMusical {
    void tocarMusica();
    void pausarMusica();
    void pararMusica();
}
